# Zero

./: .gitmodules  CMakeLists.txt
CMake/: FindZero.cmake
Include/: Zero.h
Include/Utility/: Common.h
Include/Utility/File/: File.h  SharedFile.h
Include/Utility/JSON/: JSON.h  SharedJSON.h
Include/Utility/Ruby/: Ruby.h
Include/Utility/Ruby/Modules/: Class.h  Function.h  Module.h  Zero.h
Include/Utility/Ruby/Modules/Test/: Test.h
Scripts/: blackjack.rb  logger.rb  test.rb  test_modules.rb
Source/: Zero.cpp
Source/Utility/File/: File.cpp
Source/Utility/JSON/: JSON.cpp
Source/Utility/Ruby/: Ruby.cpp
Source/Utility/Ruby/Modules/: Class.cpp  Module.cpp  Zero.cpp
Source/Utility/Ruby/Modules/Test/: Test.cpp
include/: game.h  zero.h
include/system/graphics/: glscene.h  scene.h  scenemanager.h
include/system/window/: sfmlwindow.h  sharedwindow.h  win32window.h
include/utility/: common.h  singleton.h  timer.h
include/utility/ruby/: ruby.h
include/utility/ruby/modules/: class.h  module.h  zero.h
include/utility/ruby/modules/base/: class.h  function.h
include/utility/ruby/modules/test/: test.h
source/: game.cpp
source/system/graphics/: glscene.cpp  scenemanager.cpp
source/system/window/: sfmlwindow.cpp  win32window.cpp
source/utility/file/: file.cpp
source/utility/ruby/: ruby.cpp
source/utility/ruby/modules/base/: class.cpp  function.cpp  module.cpp
source/utility/ruby/modules/test/: test.cpp
